03-k8s-clusters/onprem/overlays/external-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: nginx-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http-sonhs
      hostname: sonhs.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: http-wildcard
      hostname: "*.sonhs.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-sonhs
      hostname: sonhs.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: sonhs-com-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      hostname: "*.sonhs.com"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: sonhs-com-tls
      allowedRoutes:
        namespaces:
          from: All
